...
                  width: double.infinity,
                  alignment: Alignment.topCenter,
                  padding: const EdgeInsets.symmetric(horizontal: 25, vertical: 30),
                  child: Column(
                    children: [
                      buildInputField(
                        "E-MAIL:",
                        "Enter Email",
                        Icons.email,
                        false,
                        _emailTextController,
                        emailError,
                      ),
                      buildInputField(
                        "PASSWORD:",
                        "Enter Password",
                        Icons.lock,
                        !_passwordVisible,
                        _passwordTextController,
                        passwordError,
                      ),
...
